cmake_minimum_required(VERSION 3.17)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(p54 p54.cpp)
add_executable(p74 p74.cpp)
add_executable(p852 p852.cpp)
add_executable(p36 p36.cpp)
add_executable(p128 p128.cpp)
add_executable(p177 p177.cpp)
add_executable(p3 p3.cpp)
add_executable(p426 p426.cpp)
add_executable(p239 p239.cpp)
add_executable(p1828 p1828.cpp)
add_executable(offer60 offer60.cpp)
add_executable(offer46 offer46.cpp)
add_executable(offer26 offer26.cpp)
add_executable(p1065 p1065.cpp)
add_executable(p1884 p1884.cpp)
add_executable(p1734 p1734.cpp)
add_executable(p1829 p1829.cpp)
add_executable(p208 p208.cpp)
add_executable(p1584 p1584.cpp)
add_executable(p1832 p1832.cpp)
add_executable(p1310 p1310.cpp)
add_executable(p1824 p1824.cpp)
add_executable(p1827 p1827.cpp)
add_executable(p1669 p1669.cpp)
add_executable(p1689 p1689.cpp)
add_executable(p1769 p1769.cpp)
add_executable(p1877 p1877.cpp)
add_executable(p1833 p1833.cpp)
add_executable(p421 p421.cpp)
add_executable(p1029 p1029.cpp)
add_executable(p382 p382.cpp)
add_executable(p1109 p1109.cpp)
add_executable(interview16.02 interview16.02.cpp)
add_executable(p1823 p1823.cpp)
add_executable(p1817 p1817.cpp)
add_executable(p1717 p1717.cpp)
add_executable(p1239 p1239.cpp)
add_executable(offer36 offer36.cpp)
add_executable(offer39 offer39.cpp)
add_executable(offer40 offer40.cpp)
add_executable(offer42 offer42.cpp)

add_executable(offer62 offer62.cpp)
add_executable(offer64 offer64.cpp)
add_executable(offer65 offer65.cpp)
add_executable(offer67 offer67.cpp)
add_executable(offer3 offer3.cpp)
add_executable(p57 p57.cpp)
add_executable(p71 p71.cpp)
add_executable(p179 p179.cpp)
add_executable(interview16.04 interview16.04.cpp)
add_executable(p187 p187.cpp)
add_executable(p223 p223.cpp)
add_executable(p752 p752.cpp)
add_executable(p213 p213.cpp)
add_executable(p209 p209.cpp)
add_executable(double55_1 Contest/double55_1.cpp)
add_executable(double55_2 Contest/double55_2.cpp)
add_executable(double55_3 Contest/double55_3.cpp)
add_executable(247_1 Contest/247_1.cpp)
add_executable(247_2 Contest/247_2.cpp)
add_executable(247_3 Contest/247_3.cpp)
add_executable(247_4 Contest/247_4.cpp)

add_executable(246_1 Contest/246_1.cpp)
add_executable(246_2 Contest/246_2.cpp)
add_executable(246_3 Contest/246_3.cpp)
add_executable(246_4 Contest/246_4.cpp)

add_executable(245_1 Contest/245_1.cpp)
add_executable(245_2 Contest/245_2.cpp)
add_executable(245_3 Contest/245_3.cpp)

add_executable(double54_1 Contest/double54_1.cpp)
add_executable(double54_2 Contest/double54_2.cpp)