cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 14)

add_executable(AC3782 3782.cpp)
add_executable(AC3780 3780.cpp)
add_executable(AC3779 3779.cpp)
add_executable(AC3775 3775.cpp)
add_executable(AC3774 3774.cpp)
add_executable(AC3773 3773.cpp)
add_executable(AC3771 3771.cpp)
add_executable(AC3769 3769.cpp)
add_executable(AC3757 3757.cpp)
add_executable(AC3759 3759.cpp)
add_executable(AC3713 3713.cpp)