cmake_minimum_required(VERSION 3.17)

set(CMAKE_CXX_STANDARD 14)

add_executable(double55_1 double55_1.cpp)
add_executable(double55_2 double55_2.cpp)
add_executable(double55_3 double55_3.cpp)
add_executable(247_1 247_1.cpp)
add_executable(247_2 247_2.cpp)
add_executable(247_3 247_3.cpp)
add_executable(247_4 247_4.cpp)

add_executable(246_1 246_1.cpp)
add_executable(246_2 246_2.cpp)
add_executable(246_3 246_3.cpp)
add_executable(246_4 246_4.cpp)

add_executable(245_1 245_1.cpp)
add_executable(245_2 245_2.cpp)
add_executable(245_3 245_3.cpp)

add_executable(double54_1 double54_1.cpp)
add_executable(double54_2 double54_2.cpp)
add_executable(double54_3 double54_3.cpp)

add_executable(244_1 244_1.cpp)
add_executable(244_2 244_2.cpp)
add_executable(244_3 244_3.cpp)

add_executable(243_1 243_1.cpp)
add_executable(243_2 243_2.cpp)
add_executable(243_3 243_3.cpp)

add_executable(double53_1 double53_1.cpp)
add_executable(double53_2 double53_2.cpp)
add_executable(double53_3 double53_3.cpp)

add_executable(242_1 242_1.cpp)
add_executable(242_2 242_2.cpp)
add_executable(242_3 242_3.cpp)

add_executable(241_1 241_1.cpp)
add_executable(241_2 241_2.cpp)
add_executable(241_3 241_3.cpp)