add_executable(p4 p4.cpp)
add_executable(p22 p22.cpp)
add_executable(p32 p32.cpp)
add_executable(p44 p44.cpp)
add_executable(p97 p97.cpp)
add_executable(p54 p54.cpp)
add_executable(p74 p74.cpp)
add_executable(p78 p78.cpp)
add_executable(p91 p91.cpp)
add_executable(p99 p99.cpp)
add_executable(p134 p134.cpp)
add_executable(p852 p852.cpp)
add_executable(p36 p36.cpp)
add_executable(p128 p128.cpp)
add_executable(p177 p177.cpp)
add_executable(p3 p3.cpp)
add_executable(p206 p206.cpp)
add_executable(p56 p56.cpp)
add_executable(p426 p426.cpp)
add_executable(p239 p239.cpp)
add_executable(p1828 p1828.cpp)
add_executable(offer60 offer60.cpp)
add_executable(offer46 offer46.cpp)
add_executable(offer26 offer26.cpp)
add_executable(p1065 p1065.cpp)
add_executable(p1884 p1884.cpp)
add_executable(p1734 p1734.cpp)
add_executable(p1829 p1829.cpp)
add_executable(p208 p208.cpp)
add_executable(p1584 p1584.cpp)
add_executable(p1832 p1832.cpp)
add_executable(p1310 p1310.cpp)
add_executable(p1824 p1824.cpp)
add_executable(p1827 p1827.cpp)
add_executable(p1669 p1669.cpp)
add_executable(p1689 p1689.cpp)
add_executable(p1769 p1769.cpp)
add_executable(p1833 p1833.cpp)
add_executable(p421 p421.cpp)
add_executable(p1029 p1029.cpp)
add_executable(p382 p382.cpp)
add_executable(p1109 p1109.cpp)
add_executable(interview10.09 interview10.09.cpp)
add_executable(interview16.02 interview16.02.cpp)
add_executable(interview02.05 interview02.05.cpp)
add_executable(p1823 p1823.cpp)
add_executable(p1817 p1817.cpp)
add_executable(p1717 p1717.cpp)
add_executable(p1239 p1239.cpp)
add_executable(offer36 offer36.cpp)
add_executable(offer39 offer39.cpp)
add_executable(offer40 offer40.cpp)
add_executable(offer42 offer42.cpp)
add_executable(offer50  offer50.cpp)
add_executable(offer62 offer62.cpp)
add_executable(offer64 offer64.cpp)
add_executable(offer65 offer65.cpp)
add_executable(offer67 offer67.cpp)
add_executable(offer38 offer38.cpp)
add_executable(offer3 offer3.cpp)
add_executable(p57 p57.cpp)
add_executable(p71 p71.cpp)
add_executable(p69 p69.cpp)
add_executable(p179 p179.cpp)
add_executable(interview16.04 interview16.04.cpp)
add_executable(p187 p187.cpp)
add_executable(p223 p223.cpp)
add_executable(p310 p310.cpp)
add_executable(p752 p752.cpp)

add_executable(p213 p213.cpp)
add_executable(p209 p209.cpp)
add_executable(p645 p645.cpp)
add_executable(LCP07 LCP07.cpp)
add_executable(p810 p810.cpp)
add_executable(p33 p33.cpp)
add_executable(p210 p210.cpp)
add_executable(p684 p684.cpp)
add_executable(p380 p380.cpp)
add_executable(p1929 p1929.cpp)
add_executable(p993 p993.cpp)
add_executable(p538 p538.cpp)
add_executable(p611 p611.cpp)

add_executable(p547 p547.cpp)
add_executable(p49 p49.cpp)
add_executable(p173 p173.cpp)
add_executable(p1720 p1720.cpp)
add_executable(p346 p346.cpp)
add_executable(p457 p457.cpp)
add_executable(p539 p539.cpp)
add_executable(p1822 p1822)
add_executable(p39 p39)
add_executable(p1791 p1791)
add_executable(p338 p338.cpp)
add_executable(p739 p739.cpp)
add_executable(p256 p256.cpp)




















