cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 14)
add_executable(NC28 NC28.cpp)
add_executable(NC41 NC41.cpp)
add_executable(NC42 NC42.cpp)
add_executable(NC43 NC43.cpp)
add_executable(NC44 NC44.cpp)
add_executable(NC45 NC45.cpp)
add_executable(NC46 NC46.cpp)
add_executable(NC34 NC34.cpp)
add_executable(NC35 NC35.cpp)
add_executable(NC37 NC37.cpp)
add_executable(NC39 NC39.cpp)
add_executable(NC40 NC40.cpp)

add_executable(jz29 jz29.cpp)
add_executable(NC94 NC94.cpp)
add_executable(NC100 NC100.cpp)
add_executable(NC104 NC104.cpp)
add_executable(NC105 NC105.cpp)
add_executable(NC106 NC106.cpp)
add_executable(NC107 NC107.cpp)
add_executable(NC108 NC108.cpp)
add_executable(NC109 NC109.cpp)
add_executable(NC110 NC110.cpp)