cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 14)
add_executable(p1 p1.cpp)
add_executable(p2 p2.cpp)
add_executable(p31 p3.cpp)
add_executable(p41 p4.cpp)
add_executable(p5 p5.cpp)
add_executable(aiqyi1 aiqyi1.cpp)
add_executable(aiqiyi2 aiqiyi2.cpp)
add_executable(yuanfudao yuanfudao1.cpp)